--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^19.2.4",
     "@angular/router": "^19.2.4",
     "@angular/ssr": "^19.2.5",
+    "@vercel/speed-insights": "^1.2.0",
     "chart.js": "^4.4.8",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
