Implement work order details refactoring, introducing a new refactored component for work order details, enhancing UI with multiple tabs for tasks, materials, issues, and remarks. Added dialogs for material assignment, delivery, and editing, along with a comprehensive refactoring plan document. Updated routing and service methods for improved functionality and maintainability.

--- a/angular.json
+++ b/angular.json
@@ -193,6 +193,7 @@
   "cli": {
     "schematicCollections": [
       "angular-eslint"
-    ]
+    ],
+    "analytics": "78b81892-3bc9-47ef-9eca-86012a9c5458"
   }
 }
